--- a/00_nhl_scraping.ipynb
+++ b/00_nhl_scraping.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "322a10ae-23c9-44d0-9ea6-9fafa4067fbd",
    "metadata": {},
    "outputs": [],
@@ -22,10 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cf38c8ba-43dd-4ff8-817e-593a4e70490a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"hello world\")"
    ]
